# Zygisk-SGameHook

./: README.md  module.gradle
.github/workflows/: build.yml
module/src/main/cpp/: CMakeLists.txt  atexit.cpp  main.cpp
